--- a/webchat/lib/css/webchat.css
+++ b/webchat/lib/css/webchat.css
@@ -3,25 +3,34 @@
   -moz-box-sizing: border-box; /* Firefox, other Gecko */
   box-sizing: border-box; /* Opera/IE 8+ */
 }
+body{
+  width: 100%;
+  height: 100%;
+  color: #4b4f56;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+  font-size: 14px !important;
+}
 .bot{
-  text-align:left;
+  text-align: left;
+  margin-bottom: 8px;
 }
 .bot .text{
   background-color: #f1f0f0;
   border-bottom-left-radius: 1.0em;
-  border-top-left-radius: 4px;
   border-bottom-right-radius: 1.0em;
+  border-top-left-radius: 4px;
   border-top-right-radius: 1.0em;
-  display:inline-block;
-  margin-bottom: 8px;
+  color: #4b4f56;
+  display: inline-block;
+  padding-left: 10px ;
 }
 .bot .text span{
-  padding:10px 10px 10px 10px;
-  color: #000;
   overflow-wrap: break-word;
+  padding: 10px 10px 10px 10px;
 }
 .user{
-  text-align:right;
+  text-align: right;
+  margin-bottom: 8px;
 }
 .user .text{
   border-bottom-left-radius: 1em;
@@ -30,40 +39,49 @@
   border-top-left-radius: 1.0em;
   background-image: linear-gradient(to bottom,#5bc0de 0,#2aabd2 100%);
   color: #fff;
-  display:inline-block;
-  margin-bottom: 4px;
+  display: inline-block;
 }
 .user .text span{
-  padding:10px 10px 10px 10px;
-  color: #fff;
   overflow-wrap: break-word;
+  padding: 10px 10px 10px 10px;
+}
+
+.input{
+  width: 100%;
+  border-top: 1px solid #c3c3c3;
 }
 .input span{
   width:9%;
 }
 .input input{
-  height:40px;
-  width:80%;
+  height: 40px;
+  width: 80%;
 }
 .input .image{
-  display:inline-block;
-  height:16px;
-  width:16px;
-  background-image:url("chat_images.png");
+  display: inline-block;
+  height: 16px;
+  width: 16px;
+  background-image: url("chat_images.png");
   background-size: auto;
   background-position: -34px -89px;
 }
+.myicon{
+  display: inline-block;
+height: 16px;
+width: 16px;
+  background-image: url("persistenticon.png");
+}
+
 .custom-drop-down{
   position: absolute;
-  bottom : 50px;
+  bottom : 20px;
   left: 0;
   z-index: 1000;
   display: none;
   float: left;
-  min-width: 300px;
+  min-width: 270px;
   padding: 5px 0;
   margin: 2px 0 0;
-  font-size: 14px;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -82,93 +100,31 @@
   background-color: #e5e5e5;
 }
 .custom-drop-down > li > a{
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+  font-size: 14px !important;
+  line-height: 1.42857143;
+  color: #2aabd2;
   display: block;
   padding: 3px 20px;
   clear: both;
-  font-weight: 400;
-  line-height: 1.42857143;
-  color: #333;
   white-space: nowrap;
 }
+
 .bigbtn{
   width:300px;
   border-color: #28a4c9;
   background-image: linear-gradient(to bottom,#5bc0de 0,#2aabd2 100%);
 }
-.genericbtn2{
-  width:250px !important;
-  border-left: 1px solid #ccc !important;
-  border-right: 1px solid #ccc !important;
-  border-radius: 0 !important;
-}
-.genericbtn {
-  width:200px;
-  border-left: 1px solid #ccc !important;
-  border-right: 1px solid #ccc !important;
-  border-radius: 0 !important;
-}
- .first{
-  border: 1px solid #ccc !important;
-  border-top-left-radius: 2px !important;
-  border-top-right-radius: 12px !important;
-}
- .last{
-  border:  1px solid #ccc !important;
-  border-bottom-left-radius: 12px !important;
-  border-bottom-right-radius: 12px !important;
-}
-.generic_button ul{
-  list-style : none;
-  padding-left:0px;
-  margin-left:0px;
-}
+
+
 .btn{
   background-color: #fff;
 }
-.generic_button ul li{
-  line-height: 2em;
-}
-.generic_button ul li .text-title-subtitle div{
-  padding:10px 10px 10px 10px;
-}
-.generic_button ul li .text-title-subtitle span{
-  padding:10px 10px 10px 10px;
 
-}
-.slider {
-  position: relative;
-  overflow: hidden;
-  margin: 20px auto 0 auto;
-  border-radius: 4px;
-}
-.slider ul {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  height: 200px;
-  list-style: none;
-}
-.slider ul li {
-  position: relative;
-  display: block;
-  float: left;
-  margin: 0;
-  padding: 0;
-  width: 250px;
-  height: auto;
-  text-align: center;
-  line-height: 150px;
-}
-.slider ul li .text-title-subtitle{
-  line-height:20px;
-  width : 250px !important;
-  height: auto;
-  text-align:left;
-  border-bottom : 1px solid #c3c3c3;
-}
+
 a.control_prev, a.control_next {
   position: absolute;
-  top:20%;
+  top: 20%;
   z-index: 999;
   display: block;
   padding: 4% 3%;
@@ -193,54 +149,200 @@ a.control_next {
   right: 0;
   border-radius: 2px 0 0 2px;
 }
+
 .main-ul{
   list-style:none;
   line-height: 2.8em;
-  padding-left:10px;
-  padding-right:10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 8px;
 }
+
 #container{
-  width:300px;
-  border:1px solid #c3c3c3;
-  max-height:300px;
-  overflow-y:scroll;
+  width: 300px;
+  border: 1px solid #c3c3c3;
+  max-height: 400px;
+  overflow-y: scroll;
+}
+
+
+
+.slider {
+  position: relative;
+  overflow: hidden;
+  margin: 8px auto 0 auto;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  margin-top: 20px;
+}
+.slider ul {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  height: 200px;
+  list-style: none;
+}
+.slider ul li {
+  position: relative;
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
+  width: 250px;
+  height: auto;
+  text-align: center;
+  line-height: 2em;
+}
+
+.slider-title{
+  text-align: left;
+  padding-left: 10px;
+  font-weight: bold;
+}
+.slider-subtitle{
+  text-align: left;
+  padding-left: 10px;
+  color: rgba(0, 0, 0, .60);
+}
+.img_border{
+  border-bottom: 1px solid #ccc;
+}
+.sliderbtn{
+  color: #365899 !important;
+  text-align:center;
+  display: block !important;
+  border-top: 1px solid #ccc!important;
+}
+.sliderbtn:hover{
+  color: #365899 !important;
+  text-align:center;
+  display: block;
+}
+
+.listbtn{
+  width:250px !important;
+  border-left: 1px solid #ccc !important;
+  border-right: 1px solid #ccc !important;
+  border-radius: 0 !important;
 }
 .list-view{
-  border : 1px solid #c3c3c3;
+  border: 1px solid #ccc;
+
+  position: relative;
+  overflow: hidden;
+  margin: 8px auto 0 auto;
+
+  margin-top: 20px;
 }
 .list-view .list-item{
-  border-bottom : 1px solid #c3c3c3;
-  margin : 5px 5px 5px 5px;
+  border-bottom: 1px solid #ccc;
+  margin: 5px 0px 5px 0px;
 }
 .list-view .list-item-last{
-  border-bottom : none !important;
-  margin : 5px 5px 5px 5px;
+  border-bottom: none !important;
+  margin: 5px 5px 5px 5px;
 }
 .list-view .list-item .btn-info{
-  margin-bottom:5px;
+  margin-bottom: 5px;
 }
 .list-view .list-item .title{
-  width:80%;
-  float:left;
+  width: 78%;
+  float: left;
+  vertical-align: top;
+  margin-left: 5px !important;
 }
 .list-view .list-item img{
-  width:20%;
-  float:left;
+  width: 20%;
+  float: right;
+  vertical-align: top;
+}
+.subtitle{
+  margin-left: 5px !important;
+}
+.listbtn{
+  display: block !important;
+  width: 30% !important;
+  margin-left: 5px !important;
+  margin-bottom: 5px !important;
+  border: 1px solid #ccc !important;
+  border-radius: 4px !important;
+}
+
+.generic_text{
+  margin-bottom: 10px;
+  padding: 10px 10px 10px 10px;
+}
+.genericbtn {
+  width: 180px;
+}
+.genericframe{
+  width: 200px !important;
+  border-right: 1px solid #ccc !important;
+  border-left: 1px solid #ccc !important;
+  border-bottom: 1px solid #ccc !important;
+  border-bottom-left-radius: 12px !important;
+  border-bottom-right-radius: 12px !important;
+  padding-bottom: 3px;
+}
+.genericframe a{
+  padding-bottom: 5px;
+  margin-left: 2px;
+  margin-top: -9px;
+}
+.divide{
+  width: 200px;
+  height: 10px;
+  border-top: 1px solid #ccc !important;
+}
+.genericframe a:hover{
+  color: #365899 !important;
+}
+.generic_button{
+  padding-top: 10px;
+}
+.generic_button ul{
+  list-style : none;
+  padding-left:0px;
+  margin-left:0px;
+  border-radius: 0 !important;
+}
+.generic_button ul li{
+  line-height: 1.3em;
+}
+.generic_button ul li .text-title-subtitle div{
+  margin-bottom: 10px;
+}
+.generic_button ul li .text-title-subtitle span{
+
+}
+
+.quickReply {
+  padding-top: 10px;
+  margin-bottom: 20px;
 }
 .quickReply .quickContent{
-  background-color: #c3c3c3;
+  background-color: #f1f0f0;
+  line-height: 1.8em;
   border-bottom-left-radius: 1.0em;
-  border-top-left-radius: 4px;
   border-bottom-right-radius: 1.0em;
+  border-top-left-radius: 4px;
   border-top-right-radius: 1.0em;
+  margin-bottom: 8px;
+  padding: 10px 10px 10px 10px;
 }
 .quickReply .quickContent span{
-  padding:10px 10px 10px 10px;
   overflow-wrap: break-word;
 }
-.quickReply div button{
-  border-bottom-left-radius: 1.0em;
-  border-top-left-radius: 1.0em;
-  border-bottom-right-radius: 1.0em;
-  border-top-right-radius: 1.0em;
+.quickreplybtn {
+  border-radius: 1.3em !important;
+  width :40%;
+  color: #365899;
+  border: 1px solid #ccc !important;
+  margin-left: 4px;
+}
+.quickreplybtn:hover {
+    color: #365899 !important;
+}
+.quickreplybtn :nth-child(2){
+  margin-left: 4px;
 }
