--- a/webchat/lib/css/webchat.css
+++ b/webchat/lib/css/webchat.css
@@ -192,7 +192,7 @@ a.control_next {
   float: left;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 300px;
   height: auto;
   text-align: center;
   line-height: 2em;
