--- a/webchat/lib/css/webchat.css
+++ b/webchat/lib/css/webchat.css
@@ -22,11 +22,10 @@ body{
   border-top-right-radius: 1.0em;
   color: #4b4f56;
   display: inline-block;
-  padding-left: 10px ;
+  padding: 5px 8px 6px;
 }
 .bot .text span{
   overflow-wrap: break-word;
-  padding: 10px 10px 10px 10px;
 }
 .user{
   text-align: right;
@@ -40,10 +39,10 @@ body{
   background-image: linear-gradient(to bottom,#5bc0de 0,#2aabd2 100%);
   color: #fff;
   display: inline-block;
+  padding: 5px 8px 6px;
 }
 .user .text span{
-  overflow-wrap: break-word;
-  padding: 10px 10px 10px 10px;
+  overflow-wrap: break-word
 }
 
 .input{
@@ -158,7 +157,7 @@ a.control_next {
 
 .main-ul{
   list-style:none;
-  line-height: 2.8em;
+  line-height: 1.8;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 8px;
