--- a/webchat/lib/css/webchat.css
+++ b/webchat/lib/css/webchat.css
@@ -23,6 +23,7 @@ body{
   color: #4b4f56;
   display: inline-block;
   padding: 5px 8px 6px;
+  width : 90%;
 }
 .bot .text span{
   overflow-wrap: break-word;
@@ -40,6 +41,7 @@ body{
   color: #fff;
   display: inline-block;
   padding: 5px 8px 6px;
+  width : 90%;
 }
 .user .text span{
   overflow-wrap: break-word
